# alacenc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  atoms.cpp  atoms.h  encoder.cpp  encoder.h  main.cpp  tags.cpp  tags.h  types.cpp  types.h  wavheader.cpp  wavheader.h
.github/workflows/: build-linux.yml  build-mac.yml
scripts/: build-macos.sh  checkLicense.sh
